--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/gradle
+# Ignore Gradle build output directory
+build
