--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 
     // Use the Kotlin JUnit integration.
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
+
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
+
 }
 
 application {
